[project]
name = "intermediate-wholesaler-credit-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "mysql-connector-python>=9.5.0",
    "public-ip>=0.12",
    "python-dotenv>=1.2.1",
]
